Queda movimiento Pat2, su explicación e interacciones Dial

--- a/OpenGL/Exercici2/MyForm.ui
+++ b/OpenGL/Exercici2/MyForm.ui
@@ -78,7 +78,11 @@
       </widget>
      </item>
      <item>
-      <widget class="QDial" name="dialPatri1"/>
+      <widget class="QDial" name="dialPatri1">
+       <property name="layoutDirection">
+        <enum>Qt::LeftToRight</enum>
+       </property>
+      </widget>
      </item>
      <item>
       <spacer name="verticalSpacer_3">
